[gd_scene load_steps=2 format=2]

[ext_resource path="res://table_node.gd" type="Script" id=1]

[node name="TableNode" type="GraphNode"]
margin_right = 32.0
margin_bottom = 30.0
title = "Table"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 157.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 141.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 29.0
text = "Name"

[node name="LineEditName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 141.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 141.0
margin_bottom = 68.0

[node name="ButtonAddRow" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 79.0
margin_bottom = 30.0
text = "Add Row"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 141.0
margin_bottom = 96.0
size_flags_horizontal = 3
columns = 5

[node name="LabelNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 22.0
margin_bottom = 24.0
text = "No"

[node name="LabelMin" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 26.0
margin_right = 55.0
margin_bottom = 24.0
text = "min"

[node name="LabelMax" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 59.0
margin_right = 91.0
margin_bottom = 24.0
text = "max"

[node name="LabelValue" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 95.0
margin_right = 137.0
margin_bottom = 24.0
text = "Value"

[node name="LabelDelete" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 141.0
margin_right = 141.0
margin_bottom = 24.0

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEditName" to="." method="_on_line_edit_name_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonAddRow" to="." method="_on_button_add_row_pressed"]
